# tester

./: CMakeLists.txt  README.md
include/: string_len.hpp  test.hpp  timer.hpp
sources/: tester.cpp
